# Induction_Y23

./: A1)Banking Client (OOPs)  Assignement_1  Assignement_1.cpp  Assignment2.cpp  Assignment2server.py  Banking_Client.cpp  Code.cpp  FTP_Admin.py  FTP_Client.py  FTP_Server.py  Firstassignoops.cpp  Firstassignoopsreadme.md  README.md  README1.md  README_ROS2.md  README_ROS_1.md  READ_ME(FTP)  ROS_Assign1_readme.md  assignment_2.md  assignment_2_client.py  assignment_2_server.py  client.py  divyaman_p.cpp  divyaman_p.md  file_client.py  file_server.py  main.cpp  main_client.py  main_server.py  my_smb_simulation.launch  readme.md  ros1.md  ros_assignment1.md  server.py  tempCodeRunnerFile.cpp
A1 OOPS (submission:RONIT)/: Code.cpp  Readme.md
A2 FTP_Server(submission:RONIT)/: FTP_client.py  Readme.md
A3 ROS (submission:RONIT)/Ex 1/: README.md  Solution (Ex 1).md
A3 ROS (submission:RONIT)/Ex 2/: Readme.md  Solution (Ex 2).md
A3 ROS (submission:RONIT)/Ex 3/: Solution (Ex 3).md
Aerial_Assignments/: SavingsAccount.txt  accountHolders.txt  readme.md  readme2.md
Banking_Client/: Banking_client  Banking_client.cpp
ETH Zurich Exercises/Excercise 1/: readme.md  world_launch.launch
ETH Zurich Exercises/Exercise 3/: readme.md  recording_1.mkv  recording_2.mkv
ETH Zurich Exercises/Exercise 3/src/smb2_highlevel_controller/: CMakeLists.txt  IMPORTANT_NOTE.txt  package.xml
ETH Zurich Exercises/Exercise 3/src/smb2_highlevel_controller/include/smb2_highlevel_controller/: smb2_highlevel_controller.hpp
ETH Zurich Exercises/Exercise 3/src/smb2_highlevel_controller/launch/: world_launch_2.launch
ETH Zurich Exercises/Exercise 3/src/smb2_highlevel_controller/src/: smb2_highlevel_controller.cpp  smb2_highlevel_controller_node.cpp
FTP Server/: FTPPservereadme.md  FTP_client.py  FTP_server.py  FTPserver.py  README.md  Readme.md  chatroom_client.py  client.py  ftp_client.py  ftp_server.py  server.py  test_retrieve.txt
FTP Server/Clients/: client.py  intro_thread.py  test.py
FTP Server/FTP Server Submission/: client.py  readme.md  server.py
FTP Server/Server/: SERVER_LOG.txt  Server.py  User_Pass.csv  test.ipynb
FTP Server/ftpclient/: client.py
FTP Server/task/: ftp_server.py
FTP_Server(submission:RONIT)/: FTP_server.py
First -Assignment/: First_assignment_readme.md  Firstassignment.cpp
OOPS/: 11accounts.txt  11statement.txt  11users.txt  Readme.md  SHRAVAN_ASSIGNMENT.cpp  Solution.cpp  assignment_1.cpp  banker.cpp  banker2.cpp  bankerclient.cpp  classes.cpp  main  main.cpp  main1.cpp  readme.md  rishabh_y.cpp  rovermars2.cpp  server.py  shubhamoops.cpp  soln.cpp
OOPS/Aerial_Assignments/: Aerial_Assignment1.cpp  CurrentAccount.txt  readme.md
OOPS/Banking Client Submission/: readme.md
OOPS/Executions/: Solution.out
OOPS/ROS Assignments/: Assignment1.md  Assignment2.md
OOPS/src/: main.cpp
ROS/: Assignment1.md  ROS_Assign1_readme.md  ROS_assign2,3,4  ROS_assign2,3,4.md  Ros_exercise1.md  assignment_1.md  assignment_2.md  exercise1.md  rosass2.md  rosreadme.md
ROS/Assignment_1/: README.md
ROS/Assignment_2/: README.md
ROS/Assignment_2/smb_highlevel_controller/: CMakeLists.txt
ROS/Assignment_3/: README.MD  README.md
ROS/Assignment_3/src/: smb_common_v2  test.sh
ROS/Assignment_3/src/smb_highlevel_controller/: CMakeLists.txt  package.xml
ROS/Assignment_3/src/smb_highlevel_controller/config/: default.yaml
ROS/Assignment_3/src/smb_highlevel_controller/include/smb_highlevel_controller/: SmbHighlevelController.hpp
ROS/Assignment_3/src/smb_highlevel_controller/launch/: Excercise_3.launch  smb_highlevel_controller_launch.launch
ROS/Assignment_3/src/smb_highlevel_controller/src/: SmbHighlevelController.cpp  listener.cpp  pillar_detection.cpp  smb_highlevel_controller_node.cpp
ROS/smb_highlevel_controller/: CMakeLists.txt
ROS/smb_highlevel_controller/config/: config.yaml  smb_gazebo.rviz
ROS/smb_highlevel_controller/launch/: smb_highlevel_controller_launch.launch
ROS/smb_highlevel_controller/src/: listener.cpp
ROS_ASSIGNMENTS/: README.md  ros_1.md
ROS_Assignment 2/: CMakeLists.txt  my_package.launch  package.xml  params.yaml  smb_highlevel_controller.cpp
ROS_Assignment2/: ROS_Assignment2.md  SmbHighlevelController.cpp  SmbHighlevelController.hpp  mylaunch.launch  params.yaml
Ros assignment/: Ros exercise1.md
Ros_assignments/rishabhyadav_230859/Assignment2/: readme.md
gazebo_assignment/: Readme.md
ros_assignment2/: CMakeLists.txt  SmbHighlevelController.cpp  SmbHighlevelController.hpp  main.launch  package.xml  params.yaml  readme.md  smb_config.rviz  smb_highlevel_controller.launch  smb_highlevel_controller_node.cpp
smb_highlevel_controller/: CMakeLists.txt
smb_highlevel_controller/config/: scan_subscriber_params.yaml
smb_highlevel_controller/launch/: my_highlevelController_launch.launch
smb_highlevel_controller/src/: my_subscriber_node.cpp
(+44 files in other folders)
