<?xml version="1.0"?>
<package format="2">
  <name>smb_highlevel_controller</name>
  <version>0.1.0</version>
  <description>The smb_highlevel_controller package</description>
  <maintainer email="your_email@example.com">Your Name</maintainer>
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>roscpp</depend>
  <depend>sensor_msgs</depend>
  
  <exec_depend>rviz</exec_depend>
  <exec_depend>smb_gazebo</exec_depend>

  <export>
    <!-- Other tools can request additional information be placed here -->
  </export>
</package>

