<?xml version="1.0"?>

<package format="2">
  <name>smb2_highlevel_controller</name>
  <version>0.1.0</version>
  <description>smb2_highlevel_controller package implemented by hand (by yours truly Dnyanesh Shinde (EarlOfHycia))</description>
  <maintainer email="earlofhycia@gmail.com">Dnyanesh Shinde</maintainer>
  <license>BSD</license>
  
  <buildtool_depend>catkin</buildtool_depend>
  
  <build_depend>message_generation</build_depend>
  
  <depend>roscpp</depend>
  <depend>sensor_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>std_msgs</depend>
  
  <exec_depend>smb_gazebo</exec_depend>
  <exec_depend>message_runtime</exec_depend>


</package>
